# adbc-index

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  drivers.toml  wrangler.toml
output/: index.html
src/: artifact_parser.rs  config.rs  csv_utils.rs  error.rs  info_codes.rs  lib.rs  main.rs  models.rs  progress.rs  stub_detector.rs  svg.rs  symbols.rs
src/download/: manager.rs  mod.rs
src/github/: client.rs  types.rs
src/parquet/: drivers_schema.rs  drivers_writer.rs  info_codes_schema.rs  info_codes_writer.rs  libraries_schema.rs  libraries_writer.rs  mod.rs  releases_schema.rs  releases_writer.rs  symbols_schema.rs  symbols_writer.rs
src/pypi/: client.rs  mod.rs  types.rs
templates/: app.js.tera  index.html.tera  style.css.tera
test_artifacts/tiniest-adbc-driver/tiny-driver-macos-latest/: libtiny.dylib
tests/: symbol_stub_integration_test.rs  test_config_load.rs  test_stub_detection_comprehensive.rs
