[package]
name = "adbc-index"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
arrow = "53.0"
parquet = { version = "53.0", features = ["arrow"] }
indicatif = "0.17"
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
goblin = "0.8"
capstone = "0.14"
semver = "1.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"
